--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </div>
                     </div>
 
-                    <div
+                    <!-- <div
                         class="d-flex flex-column flex-md-row justify-content-between mb-5"
                     >
                         <div class="flex-grow-1">
@@ -185,7 +185,7 @@
                                 <b>- Description of main functions:</b>
                             </p>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div
                         class="d-flex flex-column flex-md-row justify-content-between mb-5"
