--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </div>
                     </div>
 
-                    <!-- <div
+                    <div
                         class="d-flex flex-column flex-md-row justify-content-between mb-5"
                     >
                         <div class="flex-grow-1">
@@ -172,6 +172,7 @@
                             </div>
                             <p>
                                 <b>- Github link:</b>
+                                https://github.com/Nesko032/netflix-clone
                             </p>
                             <p>
                                 <b>- Number of members:</b> 01 (individual
@@ -180,12 +181,30 @@
                             </p>
                             <p>
                                 <b>- Technologies used:</b>
+                                React, NextJS, TailwindCSS & Prisma
                             </p>
                             <p>
                                 <b>- Description of main functions:</b>
+                                <li>You can log in via Google, Github.</li>
+                                <li>You can log in by registering.</li>
+                                <li>
+                                    You can watch live videos on the main
+                                    screen.
+                                </li>
+                                <li>
+                                    You can view the description by clicking on
+                                    the More Information button.
+                                </li>
+                                <li>
+                                    You can add movies to the “My List” section.
+                                </li>
+                                <li>
+                                    You can watch videos through the ChevronDown
+                                    button on the MovieCards.
+                                </li>
                             </p>
                         </div>
-                    </div> -->
+                    </div>
 
                     <div
                         class="d-flex flex-column flex-md-row justify-content-between mb-5"
@@ -204,6 +223,18 @@
                                 demonstration of NextJs features such as
                                 routing, creating APIs, etc., which I have
                                 self-learned from a NextJs guide.
+                            </p>
+                            <hr />
+                            <div class="subheading mb-3">
+                                Building a website Netflix Clone Basic
+                            </div>
+                            <p>
+                                <b>- Github link:</b>
+                                https://github.com/Nesko032/netflix-clone-basic
+                            </p>
+                            <p>
+                                <b>- Description:</b> This project uses parts
+                                learned from the reactjs.dev website.
                             </p>
                         </div>
                     </div>
