--- a/index.html
+++ b/index.html
@@ -153,11 +153,59 @@
                                 Javascript.
                             </p>
                             <p>
-                                <b>- Description of main functions:</b> Display
-                                a list of products for sale using UI. The
-                                interaction of the login, registration page only
-                                has a validator, no storage. Details of the
-                                products, …
+                                <b>- Description of main functions:</b>
+                                <li>
+                                    <b>Login, registration page:</b> UI,
+                                    Validate, fill in enough information and
+                                    click on the login button to automatically
+                                    log in.
+                                </li>
+                                <li>
+                                    <b>Others page:</b> Forgot password page,
+                                    new password creation page.
+                                </li>
+                                <li>
+                                    <b>Home page:</b>
+                                    <ul>
+                                        <li>
+                                            <b>Header: </b> Includes UI
+                                            Navigation, can change content, show
+                                            content when hovering.
+                                            <ul>
+                                                <li>
+                                                    When hovering over the cart
+                                                    or heart, you can click on
+                                                    “See All” or the button to
+                                                    move to the checkout page.
+                                                </li>
+                                                <li>
+                                                    When you click the “Continue
+                                                    to checkout” button, you
+                                                    will be moved to the
+                                                    shipping page. You can add
+                                                    an address or edit that
+                                                    address.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <b>Body:</b> Includes UI products,
+                                            can toggle the filter button.
+                                            <ul>
+                                                <li>
+                                                    At the “Total LavAzza 1320”
+                                                    section, you can click on
+                                                    the image to move to the
+                                                    product details.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <b>Footer: </b>Includes UI
+                                            Navigation, can hover.
+                                        </li>
+                                    </ul>
+                                </li>
                             </p>
                         </div>
                     </div>
