--- a/index.html
+++ b/index.html
@@ -134,124 +134,123 @@
                     <div
                         class="d-flex flex-column flex-md-row justify-content-between mb-5"
                     >
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Website Grocery Ecommerce</h3>
-                            <div class="subheading mb-3">
-                                Building a sales website interface
+                        <div
+                            class="d-flex flex-column flex-md-row justify-content-between mb-5"
+                        >
+                            <div class="flex-grow-1">
+                                <h3 class="mb-0">Netflix Clone</h3>
+                                <div class="subheading mb-3">
+                                    Fullstack Netflix Clone
+                                </div>
+                                <p>
+                                    <b>- Github link:</b>
+                                    https://github.com/Nesko032/netflix-clone
+                                </p>
+                                <p>
+                                    <b>- Number of members:</b> 01 (individual
+                                    self-study project). Source code managed
+                                    through Github.
+                                </p>
+                                <p>
+                                    <b>- Technologies used:</b>
+                                    React, NextJS, TailwindCSS & Prisma
+                                </p>
+                                <p>
+                                    <b>- Description of main functions:</b>
+                                    <li>You can log in via Google, Github.</li>
+                                    <li>You can log in by registering.</li>
+                                    <li>
+                                        You can watch live videos on the main
+                                        screen.
+                                    </li>
+                                    <li>
+                                        You can view the description by clicking
+                                        on the More Information button.
+                                    </li>
+                                    <li>
+                                        You can add movies to the “My List”
+                                        section.
+                                    </li>
+                                    <li>
+                                        You can watch videos through the
+                                        ChevronDown button on the MovieCards.
+                                    </li>
+                                </p>
                             </div>
-                            <p>
-                                <b>- Github link:</b>
-                                https://github.com/Nesko032/Grocery-Ecommercelanding-page
-                            </p>
-                            <p>
-                                <b>- Number of members:</b> 01 (individual
-                                self-study project). Source code managed through
-                                Github.
-                            </p>
-                            <p>
-                                <b>- Technologies used:</b> HTML, CSS (SCSS),
-                                Javascript.
-                            </p>
-                            <p>
-                                <b>- Description of main functions:</b>
-                                <li>
-                                    <b>Login, registration page:</b> UI,
-                                    Validate, fill in enough information and
-                                    click on the login button to automatically
-                                    log in.
-                                </li>
-                                <li>
-                                    <b>Others page:</b> Forgot password page,
-                                    new password creation page.
-                                </li>
-                                <li>
-                                    <b>Home page:</b>
-                                    <ul>
-                                        <li>
-                                            <b>Header: </b> Includes UI
-                                            Navigation, can change content, show
-                                            content when hovering.
-                                            <ul>
-                                                <li>
-                                                    When hovering over the cart
-                                                    or heart, you can click on
-                                                    “See All” or the button to
-                                                    move to the checkout page.
-                                                </li>
-                                                <li>
-                                                    When you click the “Continue
-                                                    to checkout” button, you
-                                                    will be moved to the
-                                                    shipping page. You can add
-                                                    an address or edit that
-                                                    address.
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <b>Body:</b> Includes UI products,
-                                            can toggle the filter button.
-                                            <ul>
-                                                <li>
-                                                    At the “Total LavAzza 1320”
-                                                    section, you can click on
-                                                    the image to move to the
-                                                    product details.
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <b>Footer: </b>Includes UI
-                                            Navigation, can hover.
-                                        </li>
-                                    </ul>
-                                </li>
-                            </p>
                         </div>
                     </div>
 
-                    <div
-                        class="d-flex flex-column flex-md-row justify-content-between mb-5"
-                    >
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Netflix Clone</h3>
-                            <div class="subheading mb-3">
-                                Fullstack Netflix Clone
-                            </div>
-                            <p>
-                                <b>- Github link:</b>
-                                https://github.com/Nesko032/netflix-clone
-                            </p>
-                            <p>
-                                <b>- Number of members:</b> 01 (individual
-                                self-study project). Source code managed through
-                                Github.
-                            </p>
-                            <p>
-                                <b>- Technologies used:</b>
-                                React, NextJS, TailwindCSS & Prisma
-                            </p>
-                            <p>
-                                <b>- Description of main functions:</b>
-                                <li>You can log in via Google, Github.</li>
-                                <li>You can log in by registering.</li>
-                                <li>
-                                    You can watch live videos on the main
-                                    screen.
-                                </li>
-                                <li>
-                                    You can view the description by clicking on
-                                    the More Information button.
-                                </li>
-                                <li>
-                                    You can add movies to the “My List” section.
-                                </li>
-                                <li>
-                                    You can watch videos through the ChevronDown
-                                    button on the MovieCards.
-                                </li>
-                            </p>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Website Grocery Ecommerce UI</h3>
+                        <div class="subheading mb-3">
+                            Building a sales website interface
                         </div>
+                        <p>
+                            <b>- Github link:</b>
+                            https://github.com/Nesko032/Grocery-Ecommercelanding-page
+                        </p>
+                        <p>
+                            <b>- Number of members:</b> 01 (individual
+                            self-study project). Source code managed through
+                            Github.
+                        </p>
+                        <p>
+                            <b>- Technologies used:</b> HTML, CSS (SCSS),
+                            Javascript.
+                        </p>
+                        <p>
+                            <b>- Description of main functions:</b>
+                            <li>
+                                <b>Login, registration page:</b> UI, Validate,
+                                fill in enough information and click on the
+                                login button to automatically log in.
+                            </li>
+                            <li>
+                                <b>Others page:</b> Forgot password page, new
+                                password creation page.
+                            </li>
+                            <li>
+                                <b>Home page:</b>
+                                <ul>
+                                    <li>
+                                        <b>Header: </b> Includes UI Navigation,
+                                        can change content, show content when
+                                        hovering.
+                                        <ul>
+                                            <li>
+                                                When hovering over the cart or
+                                                heart, you can click on “See
+                                                All” or the button to move to
+                                                the checkout page.
+                                            </li>
+                                            <li>
+                                                When you click the “Continue to
+                                                checkout” button, you will be
+                                                moved to the shipping page. You
+                                                can add an address or edit that
+                                                address.
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <b>Body:</b> Includes UI products, can
+                                        toggle the filter button.
+                                        <ul>
+                                            <li>
+                                                At the “Total LavAzza 1320”
+                                                section, you can click on the
+                                                image to move to the product
+                                                details.
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <b>Footer: </b>Includes UI Navigation,
+                                        can hover.
+                                    </li>
+                                </ul>
+                            </li>
+                        </p>
                     </div>
 
                     <div
