--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                         >
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#experience"
-                            >Experience</a
+                        <a
+                            class="nav-link js-scroll-trigger"
+                            href="#personal-projects"
+                            >Personal Projects</a
                         >
                     </li>
                     <li class="nav-item">
@@ -128,9 +130,9 @@
             </section>
             <hr class="m-0" />
             <!-- Experience-->
-            <section class="resume-section" id="experience">
+            <section class="resume-section" id="personal-projects">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Personal projects</h2>
                     <div
                         class="d-flex flex-column flex-md-row justify-content-between mb-5"
                     >
@@ -156,24 +158,25 @@
                                     React, NextJS, TailwindCSS & Prisma
                                 </p>
                                 <p>
-                                    <b>- Description of main functions:</b>
-                                    <li>You can log in via Google, Github.</li>
-                                    <li>You can log in by registering.</li>
+                                    <b
+                                        >- Description of main functions, you
+                                        can:</b
+                                    >
+                                    <li>Log in via Google, Github.</li>
+                                    <li>Log in by registering.</li>
                                     <li>
-                                        You can watch live videos on the main
-                                        screen.
+                                        Watch live videos on the main screen.
                                     </li>
                                     <li>
-                                        You can view the description by clicking
-                                        on the More Information button.
+                                        View the description by clicking on the
+                                        More Information button.
                                     </li>
                                     <li>
-                                        You can add movies to the “My List”
-                                        section.
+                                        Add movies to the “My List” section.
                                     </li>
                                     <li>
-                                        You can watch videos through the
-                                        ChevronDown button on the MovieCards.
+                                        Watch videos through the ChevronDown
+                                        button on the MovieCards.
                                     </li>
                                 </p>
                             </div>
@@ -297,7 +300,7 @@
                     >
                         <div class="flex-grow-1">
                             <h3 class="mb-0">
-                                UIT: University of Information Technology
+                                University of Information Technology
                             </h3>
                             <div class="subheading mb-3">
                                 Major in Information Technology with a Japanese
